// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component should be checked by default if defaultChecked is true 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button quill-radio-group__item--active"
      data-testid="dt_quill_radio_button"
      for="test-id"
    >
      <input
        checked=""
        class="quill-radio-button__input"
        type="radio"
        value="option1"
      />
      <span>
        <svg
          data-testid="dt_checked_icon_option1_false"
          fill="#000000"
          height="24"
          id="test-id"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 20c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20M8 9c-1.094 0-2.062.594-2.625 1.5-.531.938-.531 2.094 0 3A3.03 3.03 0 0 0 8 15c1.063 0 2.031-.562 2.594-1.5.531-.906.531-2.062 0-3C10.03 9.594 9.063 9 8 9"
            />
          </g>
          <defs>
            <clippath
              id="91a873acac72fe8bbe91e3322bd04aa8__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should be disabled if disabled is true 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button"
      data-testid="dt_quill_radio_button"
      for="test-id"
    >
      <input
        class="quill-radio-button__input"
        disabled=""
        type="radio"
        value="option3"
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_option3_true"
          fill="#b8b8b8"
          height="24"
          id="test-id"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should not be checked by default if defaultChecked is false 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button"
      data-testid="dt_quill_radio_button"
      for="test-id"
    >
      <input
        class="quill-radio-button__input"
        type="radio"
        value="option2"
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_option2_false"
          fill="#7e7e7e"
          height="24"
          id="test-id"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should not render info icon when has_info is false 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button"
      data-testid="dt_quill_radio_button"
    >
      <input
        class="quill-radio-button__input"
        type="radio"
        value=""
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_undefined_false"
          fill="#7e7e7e"
          height="24"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should not trigger click event on input when info icon is clicked and disabled 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button"
      data-testid="dt_quill_radio_button"
      for="test-id"
    >
      <input
        class="quill-radio-button__input"
        disabled=""
        type="radio"
        value="option4"
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_option4_true"
          fill="#b8b8b8"
          height="24"
          id="test-id"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should render correctly with default props 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button"
      data-testid="dt_quill_radio_button"
    >
      <input
        class="quill-radio-button__input"
        type="radio"
        value=""
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_undefined_false"
          fill="#7e7e7e"
          height="24"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should render info icon when has_info is true 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button"
      data-testid="dt_quill_radio_button"
    >
      <input
        class="quill-radio-button__input"
        type="radio"
        value=""
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_undefined_false"
          fill="#7e7e7e"
          height="24"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
      <svg
        class="quill-radio-button__info custom-info"
        data-testid="dt_quill_radio_button_info"
        height="24"
        role="img"
        viewBox="0 0 16 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20m-1.5-5h1v-3h-.75a.494.494 0 0 1-.5-.5c0-.25.219-.5.5-.5H8c.25 0 .5.25.5.5V15h1c.25 0 .5.25.5.5 0 .281-.25.5-.5.5h-3a.494.494 0 0 1-.5-.5c0-.25.219-.5.5-.5M8 9.75A.72.72 0 0 1 7.25 9 .74.74 0 0 1 8 8.25a.76.76 0 0 1 .75.75.74.74 0 0 1-.75.75"
          />
        </g>
        <defs>
          <clippath
            id="ad8b23a80e31a8486d058e2dd896263c__a"
          >
            <path
              d="M0 0h16v24H0z"
            />
          </clippath>
        </defs>
      </svg>
    </label>
  </div>
</div>
`;

exports[`RadioButton component should render with a custom className 1`] = `
<div>
  <div>
    <label
      class="quill-radio-button custom-class"
      data-testid="dt_quill_radio_button"
    >
      <input
        class="quill-radio-button__input"
        type="radio"
        value=""
      />
      <span>
        <svg
          data-testid="dt_unchecked_icon_undefined_false"
          fill="#7e7e7e"
          height="24"
          role="img"
          viewBox="0 0 16 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
            />
          </g>
          <defs>
            <clippath
              id="a0161df4985017ebb2c6f8a038d991f9__a"
            >
              <path
                d="M0 0h16v24H0z"
              />
            </clippath>
          </defs>
        </svg>
      </span>
      <span
        class="quill-radio-button__label"
      >
        Radio Option
      </span>
    </label>
  </div>
</div>
`;
